NS-2456 update E2E happy path test to finish one refactored DataSubject for getting cm token removed Service loggers from rest-assured updated after NS-1880 finalization for SIT and PROD envs refactored daimler containers and added additional added todos for future refactoring refactored CM web pages as steps to reuse ones refactored, cleaned up code and optimized imports